# OpenVISA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-release.sh
.github/workflows/: release.yml
build-win64/: CTestTestfile.cmake
cmake/: win64-toolchain.cmake
examples/: idn_query.c
include/: visa.h  visatype.h
installer/: build-deb.sh  build-linux-installer.sh  build-macos-installer.sh  build-rpm.sh  openvisa.nsi
src/core/: discovery.c  session.c  session.h
src/transport/: gpib.c  serial.c  tcpip_hislip.c  tcpip_raw.c  tcpip_vxi11.c  transport.c  usbtmc.c
tests/: test_parser.c
